# ComAir

./: .gitignore  CMakeLists.txt  README.md  install-llvm.txt
examples/loops/apache53622/: Makefile_ComAir_Loop_Sample_Profiling  apache53622.c
include/AProf/: AProf.h
include/AprofHook/: AprofHookPass.h
include/ArrayIdentifier/: ArrayIdentifier.h
include/BBProfiling/: BBProfiling.h
include/Common/: ArrayLinkedIndentifier.h  ArrayLisnkedIndentifier.h  Constant.h  Helper.h  Loop.h  Search.h
include/Counter/: LoopRecursiveCounter.h  OptimizedCounter.h  RecursiveFunctionCounter.h
include/DumpCallStack/: DumpCallStack.h
include/FindOuterLoop/: FindOuterLoop.h
include/IDAssigner/: IDAssigner.h  IDManager.h  IDTagger.h
include/MakeFunctionInline/: MakeFunctionInline.h
include/MarkFlagForAprof/: MarkFlagForAprof.h  MarkFlagForAprofNoOpt.h
include/PathTracing/: BLInstrumentationGag.h  PPBallLarusDag.h  PathTracing.h
include/PrepareAprof/: PrePareAprof.h
include/PrepareSampling/: PrePareSampling.h
include/StackRWProfiling/: StackRWProfiling.h
include/Support/: BBProfiling.h
lib/: CMakeLists.txt
lib/AProf/: AProf.cpp  CMakeLists.txt
lib/AprofHook/: AprofHookPass.cpp  CMakeLists.txt
lib/ArrayIdentifier/: ArrayIdentifier.cpp  CMakeLists.txt
lib/BBProfiling/: BBProfiling.cpp  CMakeLists.txt
lib/Common/: ArrayLinkedIndentifier.cpp  ArrayLisnkedIndentifier.cpp  CMakeLists.txt  Helper.cpp  Loop.cpp  Search.cpp
lib/Counter/: BasicBlockCounter.cpp  CMakeLists.txt  LoopRecursiveCounter.cpp  OptimizedCounter.cpp  RecursiveFunctionCounter.cpp
lib/DumpCallStack/: CMakeLists.txt  DumpCallStack.cpp
lib/FindOuterLoop/: CMakeLists.txt  FindOuterLoop.cpp
lib/IDAssigner/: CMakeLists.txt  IDAssigner.cpp  IDManager.cpp  IDTagger.cpp
lib/LoopInterestedHook/: CMakeLists.txt  LoopInterestedHook.cpp
lib/LoopProfiling/: CMakeLists.txt
lib/LoopProfiling/ArrayListInstrument/: ArrayListInstrument.cpp  ArrayListSampleInstrument.cpp  CMakeLists.txt
lib/LoopProfiling/ArrayListIterationInstrument/: ArrayListIterationInstrument.cpp  CMakeLists.txt
lib/LoopProfiling/ArrayListLoopBBInstrument/: ArrayListLoopBBInstrument.cpp  CMakeLists.txt
lib/LoopProfiling/ArrayListSampleInstrument/: ArrayListSampleInstrument.cpp  CMakeLists.txt
lib/LoopProfiling/ArraySampleInstrument/: ArraySampleInstrument.cpp
lib/LoopProfiling/InterestedLoopFinder/: CMakeLists.txt  InterestedLoopFinder.cpp
lib/LoopProfiling/LoopInterestedHook/: CMakeLists.txt  CloneLoopBodyPass.cpp  LoopInterestedHook.cpp
lib/MakeFunctionInline/: CMakeLists.txt  MakeFunctionInline.cpp
lib/MarkFlagForAprof/: CMakeLists.txt  MarkFlagForAprof.cpp  MarkFlagForAprofNoOpt.cpp  MarkFlagForAprof_bak.cpp
lib/PathTracing/: BLInstrumentationGag.cpp  CMakeLists.txt  PPBallLarusDag.cpp  PathTracing.cpp
lib/PrepareAprof/: CMakeLists.txt  PrepareAprof.cpp
lib/PrepareSampling/: PrepareSampling.cpp
lib/RecursiveProfiling/: CMakeLists.txt
lib/RecursiveProfiling/PrepareSampling/: CMakeLists.txt  PrepareSampling.cpp
lib/RecursiveProfiling/RecursiveInterestedHook/: CMakeLists.txt  RecursiveInterestedHook.cpp
lib/RecursiveProfiling/RecursiveRmsHook/: CMakeLists.txt  RecursiveRmsHook.cpp  RecursiveSampleHook.cpp
lib/RecursiveProfiling/RecursiveSampleHook/: CMakeLists.txt  RecursiveSampleHook.cpp
lib/Sampling/: CMakeLists.txt
lib/Sampling/InterestedLoopFinder/: InterestedLoopFinder.cpp
lib/Sampling/LoopInterestedHook/: CloneLoopBodyPass.cpp  LoopInterestedHook.cpp
lib/Sampling/PrepareSampling/: PrepareSampling.cpp
lib/Sampling/RecursiveInterestedHook/: RecursiveInterestedHook.cpp
lib/StackRWProfiling/: CMakeLists.txt  StackRWProfiling.cpp
lib/Support/: BBProfiling.cpp  CMakeLists.txt
runtime/: CMakeLists.txt
runtime/001/: README.md
runtime/002/: CMakeLists.txt  README.md
runtime/003/: README.md
runtime/004/: aproflib.h
runtime/004_log/: aproflib.c
runtime/005/: Makefile  aproflib.bc  aproflib.c  aproflib.cc  aproflib.h  logger.h
runtime/005-loop-sample/: Makefile  aproflib-loop-sample.bc  aproflib.c  aproflib.h
runtime/005-sampling/: aproflib.c
runtime/006/: Makefile  aproflib.c  logger.c  test_runtime.c
runtime/006_cc/: Makefile  aproflib.cc
runtime/007-recursive/: aproflib.h
runtime/007-recursive-logger/: aproflib.c  aproflib.h
runtime/008-recursive/: Makefile  aproflib.c  aproflib.h
runtime/009-loop-array-linkedlist/: Makefile  aproflib.c  aproflib.h
runtime/AProfCounterHooks/: CMakeLists.txt
runtime/AProfCounterHooks/src/: aproflib.c  logmf.c
runtime/AProfHooks/: AProfHooks.c  CMakeLists.txt  hashmap.c  hashmap.h  inputpro.c  inputpro.h
runtime/AProfHooks/include/: AProfHooks.h  aproflib.h  common.h  hashMap.h  inputPro.h  logger.h  stack.h
runtime/AProfHooks/src/: AProfHooks.c  aproflib.c  aproflib.cpp  hashMap.c  inputPro.c  log_mem_to_file.c  logger.c  logmf.c  stack.c  test_runtime.c
runtime/AProfLoopArrayListHooks/: CMakeLists.txt
runtime/AProfLoopArrayListHooks/include/: aproflib.h
runtime/AProfLoopArrayListHooks/src/: aproflib.c  logmf.c
runtime/AProfLoopSampleHooks/: CMakeLists.txt
runtime/AProfLoopSampleHooks_bak/: aproflib.c  aproflib.h
runtime/AProfRecursiveHooks_bak/: CMakeLists.txt
runtime/AProfRecursiveHooks_bak/include/: aproflib.h
runtime/AProfRecursiveHooks_bak/src/: aproflib.c  logmf.c
runtime/AProfRecursiveSampleHooks/: CMakeLists.txt
runtime/AProfRecursiveSampleHooks/include/: aproflib.h
runtime/AProfRecursiveSampleHooks/src/: aproflib.c  logmf.c
runtime/bak/: CMakeLists.txt
runtime/libs/: make.sh
scripts/apache34464/: a.out  apache34464_result.csv  run_apache34464.py
stubs/apache34464/: Makefile  Makefile_ComAir  Telnet.c  input.txt  run_apache34464.py  run_apache34464.sh
stubs/runtime/: README.md  aproflib-loop-sample.bc  aproflib-recursive.bc  aproflib.bc
stubs/test-algorithm/: Makefile_ComAir_No_Optimized  Makefile_ComAir_Optimized_All  Makefile_ComAir_Optimized_BB  Makefile_ComAir_Optimized_Inline  Makefile_ComAir_Optimized_RW  run_test_two_for.py  run_test_two_for.sh  test_two_for.c
(+466 files in other folders)
