add_subdirectory(AProf)
add_subdirectory(AprofHook)
add_subdirectory(BBProfiling)
add_subdirectory(Common)
add_subdirectory(IDAssigner)
add_subdirectory(MarkFlagForAprof)
add_subdirectory(PathTracing)
add_subdirectory(PrepareSampling)
add_subdirectory(Support)
add_subdirectory(MakeFunctionInline)
add_subdirectory(LoopInterestedHook)
